--- a/src/NeoSample/clientsrc/index.html
+++ b/src/NeoSample/clientsrc/index.html
@@ -83,7 +83,7 @@
     </div> <!-- /container -->
 
 
-    <!-- Bootstrap core JavaScript
+    <!-- Bootstrap core JavaScript -->
     <!-- bower:js -->
     <!-- endbower -->
       
