cleaned up structure

--- a/src/NeoSample/clientsrc/index.html
+++ b/src/NeoSample/clientsrc/index.html
@@ -15,7 +15,7 @@
     <!-- endbower -->
 
     <!-- Custom styles for this template -->
-    <link href="css/site.css" rel="stylesheet">
+    <link href="content/site.css" rel="stylesheet">
 
   </head>
 
