--- a/src/NeoSample/clientsrc/app/dashboard/dashboard.html
+++ b/src/NeoSample/clientsrc/app/dashboard/dashboard.html
@@ -1,19 +1,21 @@
-<section id="dashboard-view" class="mainbar">
-    <section class="matter">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <ul class="today-datas">
-                        <li class="borange">
-                            <div class="pull-left"><i class="fa fa-coffee"></i></div>
-                            <div class="datas-text pull-right">
-                                <a href="http://www.gulpjs.com"><span class="bold">Gulp</span></a>
-                            </div>
-                            <div class="clearfix"></div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+<div class="panel panel-primary"
+     ng-controller="Dashboard as dashboard">
+     <div class="panel-heading" style="font-size:large">
+         {{ dashboard.title }}
+    </div>
+    
+    
+    <div class="row">
+        <div class="col-md-12">
+            <ul class="today-datas">
+                <li class="borange">
+                    <div class="pull-left"><i class="fa fa-coffee"></i></div>
+                    <div class="datas-text pull-right">
+                        <a href="http://www.gulpjs.com"><span class="bold">Gulp</span></a>
+                    </div>
+                    <div class="clearfix"></div>
+                </li>
+            </ul>
         </div>
-    </section>
-</section>
+    </div>
+</div>
